[maps/sphere_map_points0_hs.scp]: Updated 'Underwater World' teleporters
[maps/sphere_map_points1.scp]: Added missing [STARTS] template and updated [MOONGATES] template
[maps/sphere_map_points4.scp]: Updated [MOONGATES] template
[maps/sphere_map_points5.scp]: Added missing [STARTS] template and updated [MOONGATES] template

02-12-2020, Coruja
[sphere_admin.scp]: Fixed dialog 'd_admin_player_notes' incorrectly inserting quote marks when writing account notes
[sphere_dialog.scp]: Updated dialog 'd_pet_release' and fixed dialog 'd_gmpage_info' incorrectly inserting quote marks on response text

03-02-2021, Coruja
Fixed: Windows build crashing at server startup when server name length is too long.

06-02-2021, Coruja
Fixed: Server crash when call intrinsic functions <eval ISNUMBER()> / <floatval ISNUMBER()> with invalid args.
[sphereCrypt.ini]: Added crypt key for classic client 7.0.88 and enhanced client 4.0.88

04-03-2021, Coruja
[sphereCrypt.ini]: Added crypt key for classic client 7.0.89 and enhanced client 4.0.89
[sphere_msgs.scp]: Removed unused messages 'item_magic', 'item_newbie', 'item_repair', 'use_spyglass_*', 'ship_seen_*'

10-03-2021, Coruja
[sphereCrypt.ini]: Added crypt key for classic client 7.0.90 and enhanced client 4.0.90

03-02-2022, Coruja
[sphereCrypt.ini]: Added crypt key for classic clients 7.0.91 ~ 7.0.94 and enhanced clients 4.0.91 ~ 4.0.94

28-04-2022, Coruja
[sphereCrypt.ini]: Added crypt key for classic client 7.0.95 and enhanced client 4.0.95

08-07-2022, Coruja
[sphereCrypt.ini]: Added crypt key for classic client 7.0.96 and enhanced client 4.0.96
[sphere_msgs.scp]: Removed unused messages 'axis_not_priv' and 'console_not_priv'
[items/multis/multis_houses_contest.scp]: Added new houses from publish 112

30-09-2022, Coruja
[sphereCrypt.ini]: Added crypt key for classic client 7.0.97 and enhanced client 4.0.97

21-10-2022, Coruja
Changed: Updated internal Zlib libs v1.2.11 to v1.2.13.