@@ -296,7 +296,8 @@ enum BUFF_ICONS
 	BI_POTIONOFGLORIOUSFORTUNE,
 	BI_MYSTICALPOLYMORPHTOTEM,
 	BI_DISCORDANCEDEBUFF,
-	BI_CHALICEOFPILFERINGPROTECTION
+	BI_CHALICEOFPILFERINGPROTECTION,
+	BI_BATTLELUST
 };
 
 struct CSectorEnviron		// When these change it is an CTRIG_EnvironChange
