@@ -43,7 +43,7 @@ BEGIN
 			VALUE "FileDescription",	"SphereServer " SPHERE_VER_STR
 			VALUE "FileVersion",		SPHERE_VER_STR_FULL
 			VALUE "InternalName",		"SphereSvr"
-			VALUE "LegalCopyright",		"Copyright 1997-2022 by SphereServer development team"
+			VALUE "LegalCopyright",		"Copyright 1997-2023 by SphereServer development team"
 			VALUE "OriginalFilename",	"SphereSvr.exe"
 			VALUE "ProductName",		"SphereServer"
 			VALUE "ProductVersion",		SPHERE_VER_STR_FULL
@@ -115,7 +115,7 @@ BEGIN
 	LTEXT		"Version", IDC_ABOUT_VERSION, 10, 8, 200, 8
 	CTEXT		"Website", IDC_ABOUT_WEBSITE, 220, 8, 90, 8
 	LTEXT		"Compiler", IDC_ABOUT_COMPILER, 10, 16, 200, 8
-	LTEXT		"Copyright (C) 1997-2022 SphereServer development team", 3, 10, 24, 200, 8
+	LTEXT		"Copyright (C) 1997-2023 SphereServer development team", 3, 10, 24, 200, 8
 	CTEXT		"___________________________________________________________________________", 4, 0, 32, 320, 8
 	LTEXT		"This software makes use of:", 5, 10, 46, 100, 8
 	LTEXT		"libev library (v4.33)\nCopyright (C) 2007-2020 Marc Alexander Lehmann", 6, 15, 62, 290, 16
