@@ -1,10 +1,10 @@
 //****************************************************************************
-// Copyright 2022 SphereServer development team
+// Copyright 2023 SphereServer development team
 // Licensed under the Apache License, Version 2.0 (the "License").
 // You may not use this file except in compliance with the License.
 // You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
 //****************************************************************************
-// FILE LAST UPDATED: Friday, Sept 30, 2022
+// FILE LAST UPDATED: Saturday, Jan 28, 2023
 
 // WARNING: Modifing this file, without knowing what you are doing, can make Sphere behave incorrectly.
 
@@ -22,6 +22,7 @@ ENC_TFISH  3 // Twofish
 
 [SPHERECRYPT]
 //Classic Clients
+7009800 03AA8ABDD 0A9AB227F ENC_TFISH // 7.0.98
 7009700 03AE221ED 0A9F47E7F ENC_TFISH // 7.0.97
 7009600 03ADBA3FD 0A9E1527F ENC_TFISH // 7.0.96
 7009500 03B1D220D 0A915BE7F ENC_TFISH // 7.0.95
@@ -179,6 +180,7 @@ ENC_TFISH  3 // Twofish
 2000000 02D13A5FD 0A39D527F ENC_BFISH // 2.0.0
 
 //Enhanced Clients
+067900980 018A8ABDD 0B8AB227F ENC_TFISH // 4.0.98
 067900970 018E221ED 0B8F47E7F ENC_TFISH // 4.0.97
 067900960 018DBA3FD 0B8E1527F ENC_TFISH // 4.0.96
 067900950 0191D220D 0B815BE7F ENC_TFISH // 4.0.95
